2017-12-02  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* examples/site-lib/marks.fs (marks->string):  port-puts
	requires an output io object.

2017-12-01  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* examples/site-lib/examp.fs: Replace several undefs with
	correct values for function graph.

2017-10-06  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* SConscript: print() syntax has changed.

2017-09-25  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* examples/site-lib/clm.fs: Remove clm-default-frequency.

2016-03-25  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* SConstruct: New file.
	* SConscript: New file.
	* config.h: New file.
	* src-config.h.in: New file.

2016-03-22  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* src/fth.c: Command line option -h removed.

2016-02-05  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* src/proc.c (fth_xt_call, fth_xt_apply): New global
	functions added.

	* src/regexp.c (fth_regexp_var_ref): New global function
	added.

2015-02-27  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* examples/site-lib/hooks.fs: Remove deprecated hooks
	output-name-hook, info-popup-hook, peak-env-hook, start-hook.

2015-02-25  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* examples/site-lib/clm.fs: Remove global variable
	*clm-output-device*.

2015-02-18  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* examples/site-lib/clm.fs: Replace audio-output-device
	with mus-audio-default.

2015-02-01  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* examples/site-lib/clm.fs (notelength): Computation should
	be done in does-part to honor global variable *clm-tempo*.

2015-01-30  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* examples/site-lib/examp.fs (read-ascii): new-sound args changed.

2015-01-10  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* src/printf.c (doprnt, string_doprnt): Format %c accepts
	field width like %s.

	* src/string.c (fth_string_replace): Bugfix.
